CMAKE_MINIMUM_REQUIRED(VERSION 3.25)

PROJECT(vscode-clangd-demo CXX)

SET(CMAKE_CXX_STANDARD 17)

ADD_EXECUTABLE(main)
TARGET_SOURCES(main PRIVATE src/main.cpp)
TARGET_INCLUDE_DIRECTORIES(main PRIVATE ${PROJECT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(main PRIVATE stringutil)

ADD_LIBRARY(stringutil)
TARGET_SOURCES(stringutil PRIVATE src/stringutil.cpp)
TARGET_INCLUDE_DIRECTORIES(stringutil PRIVATE ${PROJECT_SOURCE_DIR}/include)
